packages/next-swc/crates/core/tests/errors/next-font-loaders/font-modules/no-args/input.js
import { Inter } from '@next/google-fonts'
fn()
Inter()
const inter = Inter()
